--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
         </div>
         <img src="asset/Cartoon.jpg" alt="Cartoon" />
       </div>
+      <section id="brands-logo">
+        <p>Trusted By 4,000+ Companies</p>
+        <div>
+          <img src="asset/slack.jpg" alt="Logo of slack" />
+          <img src="asset/Dropbox.jpg" alt="Logo of Dropbox" />
+          <img src="asset/zoom.jpg" alt="Logo of Zoom" />
+        </div>
+      </section>
     </section>
   </body>
 </html>
