--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <h1>Digital Agency</h1>
         <div>
           <a href="">home</a>
-          <a href="">about</a>
+          <a href="./about.html" target="_blank">about</a>
           <a href="">testimonials</a>
           <a href="">contact</a>
         </div>
+        <img src="./asset/threelines new.png" alt="" />
       </nav>
       <div>
         <div>
@@ -41,6 +42,9 @@
           <img src="asset/Dropbox.jpg" alt="Logo of Dropbox" />
           <img src="asset/zoom.jpg" alt="Logo of Zoom" />
         </div>
+      </section>
+      <section id="test">
+        <h1>Section ID test</h1>
       </section>
     </section>
   </body>
